@@ -1,3 +1,11 @@
+2020-03-31  Jay Berkenbilt  <ejb@ql.org>
+
+	* If QPDF_EXECUTABLE is set, use it as the path to qpdf for
+	purposes of completion. This variable is only read during the
+	executation of `qpdf --completion-zsh` and `qpdf
+	--completion-bash`. It is not used during the actual evaluation of
+	completions.
+
 2020-02-22  Jay Berkenbilt  <ejb@ql.org>
 
 	* Update pdf-set-form-values.cc to use and mention
